# Sync-Mate-API-WS

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  protocol.yml
app/: config.py  main.py
app/api/: endpoints.py  rezka_router.py  room_router.py  router.py
app/core/: room.py
app/modules/rezka/: _base.py  _decoder.py  dependencies.py  router.py  schemas.py  service.py
app/modules/room/: dependencies.py  handler.py  models.py  router.py  schemas.py  service.py
app/schemas/: room.py
app/services/: client_handler.py  room_storage.py
app/services/rezka/: rezka_base.py  rezka_decoder.py  rezka_service.py  rezka_stream.py
app/services/room/: room.py  room_storage.py  user.py  user_handler.py
app/ws/: router.py  schemas.py  websocket.py
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  configuration.md  conventions.md  deployment.md  rest-api.md  rezka.md  testing.md  websocket-protocol.md
docs/adr/: 0001-in-memory-rooms.md  0002-async-only-rezka.md  0003-ws-protocol-shared-contract.md  0004-tag-equals-deploy.md  README.md
http/: api_tests.http
scripts/: arch_lint.py  protocol_check.py
tests/: conftest.py  test_api.py  test_rezka_api.py  test_room.py  test_ws.py
tests/api/: test_endpoints.py  test_room_validation.py
tests/services/rezka/: test_rezka_base.py  test_rezka_decoder.py  test_rezka_service.py  test_rezka_stream.py
tests/services/room/: test_room.py  test_room_storage.py  test_user_handler.py
tests/ws/: test_websocket.py
