[tool.poetry]
name = "sync-mate-api-ws"
version = "0.1.0"
description = ""
authors = ["Zebaro <denok100100@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^6.0.0"
black = "^23.9.1"
isort = "^5.12.0"
httpx = "^0.28.1"

[tool.black]
line-length = 120

[flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
